--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@ Libraries
 sfml
 SFML-2.6.1
 Semester_2/8. SFML
+Semester_2/7. FileReader/ConsoleApplication1
+BasicGroup/Lab_2_7/Lab_2_7
 vs-projects
 BasicGrou
+*.sln
+x64
